buyoutyourcoach/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buyoutyourcoach-service
  namespace: buyoutyourcoach
  labels:
    app: buyoutyourcoach
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: buyoutyourcoach
