buyoutyourcoach/app/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buyoutyourcoach-ingress-external
  namespace: buyoutyourcoach
  labels:
    app: buyoutyourcoach
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "leresolver"
spec:
  ingressClassName: traefik
  rules:
  - host: buyoutyourcoach.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buyoutyourcoach-service
            port:
              number: 3000
  tls:
  - hosts:
    - buyoutyourcoach.com
