buyoutyourcoach/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buyoutyourcoach-ingress
  namespace: buyoutyourcoach
  labels:
    app: buyoutyourcoach
spec:
  ingressClassName: traefik
  rules:
  - host: byc.ddellspe.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buyoutyourcoach-service
            port:
              number: 3000
  tls:
  - hosts:
    - byc.ddellspe.dev
    secretName: ddellspe-tls
